Added the features of milestone 50%